# housing_prediction_api

./: Dockerfile  README.md  build-push.sh  pyproject.toml
src/: main.py
tests/: test.py
trainer/: predict.py  train.py
